# reqm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/: commit.md  exporter.md  incose-rewrite.md  models.md  validate.md
FUN-reqm-product-requirements/: .folder-metadata.md  .project-metadata.md  .specification-metadata.md
FUN-reqm-product-requirements/ARCH-architecture/: ARCH-001-modular-exporters.md  ARCH-003-git-native.md  ARCH-005-export-output-path.md  ARCH-006-git-delegated-versioning.md  ARCH-007-no-internal-versioning.md  ARCH-008-project-metadata-file.md  ARCH-009-project-key-field.md  ARCH-010-related-projects-list.md  ARCH-011-load-project-metadata-function.md  ARCH-012-exporter-subclass-enforcement.md  ARCH-013-validation-items-path.md
FUN-reqm-product-requirements/CLI-cli-commands/: .folder-metadata.md  CLI-001-list.md  CLI-002-list-summary.md  CLI-004-export.md  CLI-004-list-root.md  CLI-005-list-empty-results.md  CLI-006-show-full-content.md  CLI-007-show-unknown-id-error.md  CLI-009-validate-exit-success.md  CLI-010-validate-exit-violation-list.md  CLI-011-validate-root-override.md  CLI-012-export-invoke-named.md  CLI-013-export-help-lists-exporters.md  CLI-014-export-unknown-error.md  CLI-015-export-root-override.md  CLI-016-list-exits-zero-no-results.md  CLI-017-show-exits-one-unknown-id.md  CLI-018-validate-exits-zero-success.md  CLI-019-validate-exits-one-failure.md  CLI-020-export-writes-output-file.md  CLI-021-export-exits-one-unknown.md
FUN-reqm-product-requirements/EXP-export-reports/: EXP-002-traceability-report.md  EXP-005-column-widths-tab-colours.md  EXP-005-column-widths.md  EXP-006-matrix-sheet.md  EXP-009-traceability-formatting.md  EXP-010-results-sheet.md  EXP-011-coverage-sheet.md  EXP-012-coverage-calculation.md  (+5 more)
docs/: README.md  commands.md  development.md  exporters.md  schema.md  validation.md
reqm/: __init__.py  cli.py  fs.py  models.py  validate.py
requirements/: .folder-metadata.md
tests/: __init__.py  conftest.py  test_cli.py  test_e2e.py  test_export_requirements.py  test_export_test_results.py  test_export_traceability.py  test_fs.py  test_validate.py
(+111 files in other folders)
